--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,29 +14,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-10 Sun 15:26]
+#+CAPTION: Clock summary at [2017-09-10 Sun 19:33]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *28:27* |       |      | 100.0 |
+| *Total time*                                                                | *30:43* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 28:27   |       |      | 100.0 |
-| Active                                                                      |         | 28:27 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   2.6 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:33 |   5.4 |
-| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   3.0 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   4.4 |
-| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   1.6 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |   8.6 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |   6.4 |
-| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   1.2 |
-| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  27.5 |
+| Stories                                                                     | 30:43   |       |      | 100.0 |
+| Active                                                                      |         | 30:43 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   2.4 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:33 |   5.0 |
+| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   2.8 |
+| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   4.1 |
+| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   1.5 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |   7.9 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |   5.9 |
+| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   1.1 |
+| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  25.4 |
 | COMPLETED Remove extra copying in mapper                                    |         |       | 0:05 |   0.3 |
-| COMPLETED Investigate the JSON break on Northwind model                     |         |       | 0:57 |   3.3 |
+| COMPLETED Investigate the JSON break on Northwind model                     |         |       | 0:57 |   3.1 |
 | COMPLETED Rename ODB parameters                                             |         |       | 0:11 |   0.6 |
-| COMPLETED Investigate usage of origin type                                  |         |       | 0:15 |   0.9 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 6:45 |  23.7 |
-| STARTED Improve dumping of models                                           |         |       | 2:57 |  10.4 |
+| COMPLETED Investigate usage of origin type                                  |         |       | 0:15 |   0.8 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 6:45 |  22.0 |
+| STARTED Improve dumping of models                                           |         |       | 5:13 |  17.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -664,6 +664,10 @@ Tasks:
 - make is_enabled private in dependencies builder and see what breaks.
 
 *** STARTED Improve dumping of models                                 :story:
+    CLOCK: [2017-09-10 Sun 18:58]--[2017-09-10 Sun 19:33] =>  0:35
+    CLOCK: [2017-09-10 Sun 18:31]--[2017-09-10 Sun 18:57] =>  0:26
+    CLOCK: [2017-09-10 Sun 18:25]--[2017-09-10 Sun 18:30] =>  0:05
+    CLOCK: [2017-09-10 Sun 15:27]--[2017-09-10 Sun 16:37] =>  1:10
     CLOCK: [2017-09-10 Sun 15:14]--[2017-09-10 Sun 15:26] =>  0:12
     CLOCK: [2017-09-10 Sun 14:49]--[2017-09-10 Sun 15:13] =>  0:24
     CLOCK: [2017-09-10 Sun 14:35]--[2017-09-10 Sun 14:48] =>  0:13
