--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,29 +14,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-11 Mon 22:54]
+#+CAPTION: Clock summary at [2017-09-12 Tue 08:18]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *34:16* |       |      | 100.0 |
+| *Total time*                                                                | *34:58* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 34:16   |       |      | 100.0 |
-| Active                                                                      |         | 34:16 |      | 100.0 |
+| Stories                                                                     | 34:58   |       |      | 100.0 |
+| Active                                                                      |         | 34:58 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   2.1 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:33 |   4.5 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:33 |   4.4 |
 | COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   2.5 |
 | COMPLETED Clean-up readme                                                   |         |       | 1:15 |   3.6 |
-| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   1.4 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |   7.1 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |   5.3 |
+| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   1.3 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |   7.0 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |   5.2 |
 | COMPLETED Tailor dogen models                                               |         |       | 0:21 |   1.0 |
-| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  22.8 |
+| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  22.4 |
 | COMPLETED Remove extra copying in mapper                                    |         |       | 0:05 |   0.2 |
-| COMPLETED Investigate the JSON break on Northwind model                     |         |       | 0:57 |   2.8 |
+| COMPLETED Investigate the JSON break on Northwind model                     |         |       | 0:57 |   2.7 |
 | COMPLETED Rename ODB parameters                                             |         |       | 0:11 |   0.5 |
 | COMPLETED Investigate usage of origin type                                  |         |       | 0:15 |   0.7 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 6:45 |  19.7 |
-| STARTED Improve dumping of models                                           |         |       | 8:46 |  25.6 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 6:45 |  19.3 |
+| STARTED Improve dumping of models                                           |         |       | 9:28 |  27.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -664,6 +664,7 @@ Tasks:
 - make is_enabled private in dependencies builder and see what breaks.
 
 *** STARTED Improve dumping of models                                 :story:
+    CLOCK: [2017-09-12 Tue 07:35]--[2017-09-12 Tue 08:17] =>  0:42
     CLOCK: [2017-09-11 Mon 20:42]--[2017-09-11 Mon 22:54] =>  2:12
     CLOCK: [2017-09-11 Mon 19:20]--[2017-09-11 Mon 20:41] =>  1:21
     CLOCK: [2017-09-10 Sun 18:58]--[2017-09-10 Sun 19:33] =>  0:35
@@ -763,7 +764,7 @@ Notes:
 
 Links:
 
-= [[http://www.randygaul.net/2015/06/15/printing-pretty-ascii-trees/][Printing Pretty Ascii Trees]]
+- [[http://www.randygaul.net/2015/06/15/printing-pretty-ascii-trees/][Printing Pretty Ascii Trees]]
 
 *** Remove dumping of models from log                                 :story:
 
