--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,29 +14,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-12 Tue 08:18]
-| <75>                                                                        |         |       |      |       |
-| Headline                                                                    | Time    |       |      |     % |
-|-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *34:58* |       |      | 100.0 |
-|-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 34:58   |       |      | 100.0 |
-| Active                                                                      |         | 34:58 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   2.1 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:33 |   4.4 |
-| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   2.5 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   3.6 |
-| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   1.3 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |   7.0 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |   5.2 |
-| COMPLETED Tailor dogen models                                               |         |       | 0:21 |   1.0 |
-| COMPLETED Rename yarn concepts                                              |         |       | 7:49 |  22.4 |
-| COMPLETED Remove extra copying in mapper                                    |         |       | 0:05 |   0.2 |
-| COMPLETED Investigate the JSON break on Northwind model                     |         |       | 0:57 |   2.7 |
-| COMPLETED Rename ODB parameters                                             |         |       | 0:11 |   0.5 |
-| COMPLETED Investigate usage of origin type                                  |         |       | 0:15 |   0.7 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 6:45 |  19.3 |
-| STARTED Improve dumping of models                                           |         |       | 9:28 |  27.1 |
+#+CAPTION: Clock summary at [2017-09-13 Wed 08:34]
+| <75>                                                                        |         |       |       |       |
+| Headline                                                                    | Time    |       |       |     % |
+|-----------------------------------------------------------------------------+---------+-------+-------+-------|
+| *Total time*                                                                | *36:13* |       |       | 100.0 |
+|-----------------------------------------------------------------------------+---------+-------+-------+-------|
+| Stories                                                                     | 36:13   |       |       | 100.0 |
+| Active                                                                      |         | 36:13 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   2.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:33 |   4.3 |
+| COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   2.4 |
+| COMPLETED Clean-up readme                                                   |         |       |  1:15 |   3.5 |
+| COMPLETED Rename transformers to adapters                                   |         |       |  0:28 |   1.3 |
+| COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   6.7 |
+| COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   5.0 |
+| COMPLETED Tailor dogen models                                               |         |       |  0:21 |   1.0 |
+| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  21.6 |
+| COMPLETED Remove extra copying in mapper                                    |         |       |  0:05 |   0.2 |
+| COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   2.6 |
+| COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.5 |
+| COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.7 |
+| STARTED Add canonical archetype support to yarn                             |         |       |  6:45 |  18.6 |
+| STARTED Improve dumping of models                                           |         |       | 10:43 |  29.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -664,6 +664,7 @@ Tasks:
 - make is_enabled private in dependencies builder and see what breaks.
 
 *** STARTED Improve dumping of models                                 :story:
+    CLOCK: [2017-09-12 Tue 20:25]--[2017-09-12 Tue 21:40] =>  1:15
     CLOCK: [2017-09-12 Tue 07:35]--[2017-09-12 Tue 08:17] =>  0:42
     CLOCK: [2017-09-11 Mon 20:42]--[2017-09-11 Mon 22:54] =>  2:12
     CLOCK: [2017-09-11 Mon 19:20]--[2017-09-11 Mon 20:41] =>  1:21
@@ -765,6 +766,16 @@ Notes:
 Links:
 
 - [[http://www.randygaul.net/2015/06/15/printing-pretty-ascii-trees/][Printing Pretty Ascii Trees]]
+
+
+FIXME: website should store content on git, and monitor it. We should
+allow users to update their git repos and see changes immediately;
+browse git revisions/tags and change production.
+
+*** Transform probe coordinates
+
+Allow users to supply coordinates to transforms in some form so that
+we only dump a subset of the transform data.
 
 *** Remove dumping of models from log                                 :story:
 
